--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/mrmurtz/makers_bnb/issues"
   },
-  "homepage": "https://github.com/mrmurtz/makers_bnb#readme"
+  "homepage": "https://github.com/mrmurtz/makers_bnb#readme",
+  "dependencies": {
+    "bookshelf": "^0.10.1",
+    "gulp-install": "^0.6.0",
+    "jasmine-node": "^1.14.5",
+    "knex": "^0.12.1",
+    "knex-cleaner": "^1.1.3",
+    "pg": "^6.1.0",
+    "zombie": "^4.2.1"
+  }
 }
