--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "homepage": "https://github.com/mrmurtz/makers_bnb#readme",
   "dependencies": {
     "bookshelf": "^0.10.1",
+    "ejs": "^2.5.2",
     "gulp-install": "^0.6.0",
     "jasmine-node": "^1.14.5",
     "knex": "^0.12.1",
     "knex-cleaner": "^1.1.3",
     "pg": "^6.1.0",
+    "zombie": "^4.2.1"
+  },
+  "devDependencies": {
     "zombie": "^4.2.1"
   }
 }
