--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "knex": "^0.12.1",
     "knex-cleaner": "^1.1.3",
     "pg": "^6.1.0",
+    "querystring": "^0.2.0",
     "zombie": "^4.2.1"
   }
 }
