--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mrmurtz/makers_bnb#readme",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "bookshelf": "^0.10.1",
     "ejs": "^2.5.2",
     "gulp-install": "^0.6.0",
